--- a/udemy-express/hbs-views/add-product.hbs
+++ b/udemy-express/hbs-views/add-product.hbs
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{ pageTitle }}</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
     <header>
         <nav>
             <ul>
                 <li><a href="/">SHOP</a></li>
-                <li><a href="/add-product">ADD PRODUCT</a></li>
+                <li><a href="/admin/add-product">ADD PRODUCT</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <form action='/admin/add-product' method="POST">
+        <form action='/admin/add-product' method="POST" >
             <input type='text' name='title'> 
             <button type='submit'>Add products</button>
         </form>
     </main>
+
 </body>
 </html>
