--- a/udemy-express/views/404.ejs
+++ b/udemy-express/views/404.ejs
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/style.css">
+<%- include('includes/head.ejs') %>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">SHOP</a></li>
-                <li><a href="/add-product">ADD PRODUCT</a></li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('includes/nav.ejs') %>
     <main>
         <h1>404 Page Not Found !!! </h1>
     </main>
