--- a/udemy-express/views/add-product.ejs
+++ b/udemy-express/views/add-product.ejs
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/style.css">
+<%- include('includes/head.ejs') %>
 </head>
 <body>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">SHOP</a></li>
-                <li><a href="/admin/add-product">ADD PRODUCT</a></li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('includes/nav.ejs') %>
 
     <main>
         <form action='/admin/add-product' method="POST" >
