24/1/25 프론트 로직 업데이트

--- a/project/front/src/page/Board/component/InputReply.module.css
+++ b/project/front/src/page/Board/component/InputReply.module.css
@@ -3,3 +3,12 @@
 .error{
     color: red;
 }
+
+.errorInput{
+    border: 1px solid #b40e0e;
+    background-color: #fddddd;
+}
+
+.inputClear{
+    color: #06b771;
+}
