--- a/project/front/src/component/popup/Alert.module.css
+++ b/project/front/src/component/popup/Alert.module.css
@@ -1,7 +1,15 @@
-.Alert{
+.alert{
     position: fixed;
     width: 100%;
-    background-color: rgb(20, 204, 164);
     text-align: center;
     color: #fff;
 }
+
+.alert_success{
+    background-color: rgb(20, 204, 164);
+}
+
+.alert_falid{
+    background-color: rgb(238, 41, 27);
+}
+
