--- a/project/front/src/App.css
+++ b/project/front/src/App.css
@@ -1,15 +1,6 @@
 /* DarkMode */
-:root{
-  --dark-bgcolor : #000;
-  --dark-textColor : #fff;
-  --error-Message-color : red;
-}
-
 .App {
-  text-align: center;
   background-color: #282c34;
-  width: 100%;
-  height: 100vh;
 }
 
 .App-logo {
@@ -22,42 +13,33 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
-
   min-height: 100vh;
+  font-size: calc(10px + 2vmin);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-color: #fff;
+  color: #fff;
+  transition: background-color .6s 0.3s cubic-bezier(0, 0.88, 0, 1.03);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.darkMode {
+  background-color: #000;
+  color: #fff;
+}
+.darkMode li {
+  color: #fff;
+}
+.darkMode li a {
+  color: #fff;
 }
 
-
-.darkMode{
-  background-color: var(--dark-bgcolor);
-  color: var(--dark-textColor);
-}
-
-.darkMode li a , .darkMode li{
-  color: var(--dark-textColor);
-}
-
-
-.errorMessage{
-  color: var(--error-Message-color);
-}
+.errorMessage {
+  color: rgb(233, 97, 97);
+}/*# sourceMappingURL=app.css.map */
