--- a/project/front/src/app.scss
+++ b/project/front/src/app.scss
@@ -31,9 +31,9 @@ $error-Message-color : rgb(233, 97, 97);
   
 // 다크모드
 body{
-    background-color: #fff;
+    // background-color: #fff;
     color: $dark-textColor;
-    transition: background-color 1s .5s cubic-bezier(0, 0.88, 0, 1.03);
+    // transition: background-color 1s .5s cubic-bezier(0, 0.88, 0, 1.03);
 }
 .darkMode{
     background-color: $dark-bgcolor;
