--- a/project/front/src/app.scss
+++ b/project/front/src/app.scss
@@ -30,11 +30,6 @@ $error-Message-color : rgb(233, 97, 97);
 }
   
 // 다크모드
-body{
-    // background-color: #fff;
-    color: $dark-textColor;
-    // transition: background-color 1s .5s cubic-bezier(0, 0.88, 0, 1.03);
-}
 .darkMode{
     background-color: $dark-bgcolor;
     color: $dark-textColor;
@@ -50,3 +45,31 @@ body{
 .errorMessage{
     color: $error-Message-color;
 }
+.loaded{
+    animation: 0.4s ease load forwards;
+    opacity: 0;
+  }
+  .unloaded{
+    animation: 0.4s ease unload forwards;
+  }
+  @keyframes load{
+    0%{
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100%{
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  @keyframes unload{
+    0%{
+      opacity: 1;
+      transform: translateY(0px);
+    }
+    100%{
+      opacity: 0;
+      transform: translateY(20px);
+    }
+  }
+  
