--- a/project/front/src/component/popup/Popup.module.css
+++ b/project/front/src/component/popup/Popup.module.css
@@ -1,24 +1,36 @@
 .popupContainer{
-    width: 90%;
-    max-width: 400px;
-    max-height: 500px;
-    height: 90%;
-    background-color: #fff;
-    z-index: 10;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+  width: 90%;
+  max-width: 400px;
+  max-height: 500px;
+  height: 90%;
+  background-color: #fff;
+  z-index: 10;
+  position: fixed;
+  left: 50%;
+  top: 50%; 
+  animation: popupAnimation .4s  cubic-bezier(0.05, 0.9, 0.11, -0.02) forwards;
+  
+}
+
+@keyframes popupAnimation{
+  0%{
+    opacity: 0;
+    transform: translateY(80px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 .backdrop{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: #1d1d1da3;
-    z-index: 1;
-    top: 0;
-    -webkit-backdrop-filter: blur(1px);
-    backdrop-filter: blur(1px);
-    left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #1d1d1da3;
+  z-index: 2;
+  top: 0;
+  -webkit-backdrop-filter: blur(1px);
+  backdrop-filter: blur(1px);
+  left: 0;
 }
