--- a/project/front/src/app.scss
+++ b/project/front/src/app.scss
@@ -149,8 +149,13 @@ $error-Message-color : rgb(233, 97, 97);
         padding:0px 10px;
         display: block;
       }
-      
     }
+  }
+  .boardDashBoard{
+    width: 50%;
+  }
+  .borderReply{
+    width: 50%;
   }
 
   .BoardComment{
@@ -163,18 +168,19 @@ $error-Message-color : rgb(233, 97, 97);
     /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);*/
     .replyPicture{
       width: 50px;
-    height: 50px;
-    margin-right: 20px;
-    border-radius: 5em;
-    background-color: rgba(0, 0, 0, 0.2);
-    box-shadow: -4px -4px 10px rgb(255, 255, 255), 4px 4px 10px rgba(36, 36, 36, 0.15);
-    border: 2px solid #ffffff5c;
+      height: 50px;
+      margin-right: 20px;
+      border-radius: 5em;
+      box-shadow: -4px -4px 10px rgb(255, 255, 255), 4px 4px 10px rgba(36, 36, 36, 0.15);
+      border: 2px solid rgb(255 255 255);
+      box-sizing: border-box;
     }
     .replyHeader{
       display: flex;
       align-items: center;
       .reply_UserName{
         font-weight: bold;
+        font-size: 14px;
       }
     }
     .replyDate{
@@ -183,6 +189,7 @@ $error-Message-color : rgb(233, 97, 97);
     }
     .replyDescription{
       margin-bottom: 10px;
+      font-size: 14px;
     }
     .replyDelete{
       position: absolute;
@@ -221,7 +228,7 @@ $error-Message-color : rgb(233, 97, 97);
     width: 100px;
     height: 40px;
     display: flex;
-    border-radius: 1em;
+    border-radius: 5em;
     color: rgba(38, 65, 125, 0.6);
     font-size: 14px;
     cursor: pointer;
@@ -240,15 +247,14 @@ $error-Message-color : rgb(233, 97, 97);
   
 
   .pageTitle{
-    font-size: 70px;
+    font-size: 120px;
     font-weight: bold;
   }
 
 
-  .pageDashBoard{
-    height: 400px;
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-  }
-  
+  // .pageDashBoard{
+  //   height: 400px;
+  //   display: flex;
+  //   align-items: center;
+  //   background-color: #fff;
+  // }
