--- a/project/front/src/App.css
+++ b/project/front/src/App.css
@@ -140,10 +140,6 @@ nav ul li {
   display: block;
 }
 
-.boardDashBoard {
-  width: 50%;
-}
-
 .borderReply {
   width: 50%;
 }
@@ -188,9 +184,10 @@ nav ul li {
 }
 .BoardComment .replyContents {
   background-color: #fff;
-  padding: 10px;
+  padding: 10px 15px;
   border-radius: 0.5em;
   position: relative;
+  width: calc(100% - 70px);
 }
 .BoardComment .replyContents::before {
   content: "";
@@ -233,6 +230,13 @@ nav ul li {
 }
 
 .pageTitle {
-  font-size: 120px;
+  font-size: 100px;
   font-weight: bold;
+}
+
+.pageDashBoard {
+  background: #212123;
+  width: 100%;
+  height: 350px;
+  background-size: cover;
 }/*# sourceMappingURL=app.css.map */
