--- a/project/front/src/app.scss
+++ b/project/front/src/app.scss
@@ -151,9 +151,6 @@ $error-Message-color : rgb(233, 97, 97);
       }
     }
   }
-  .boardDashBoard{
-    width: 50%;
-  }
   .borderReply{
     width: 50%;
   }
@@ -197,9 +194,10 @@ $error-Message-color : rgb(233, 97, 97);
     }
     .replyContents{
       background-color: #fff;
-      padding: 10px;
-      border-radius: .5em;
+      padding: 10px 15px;
+      border-radius: 0.5em;
       position: relative;
+      width: calc(100% - 70px);
 
       &::before{
         content: "";
@@ -247,14 +245,15 @@ $error-Message-color : rgb(233, 97, 97);
   
 
   .pageTitle{
-    font-size: 120px;
+    font-size: 100px;
     font-weight: bold;
   }
 
 
-  // .pageDashBoard{
-  //   height: 400px;
-  //   display: flex;
-  //   align-items: center;
-  //   background-color: #fff;
-  // }
+  .pageDashBoard{
+    background: #212123;
+    width: 100%;
+    height: 350px;
+    // background-image : url('/img/board/banner.jpg');
+    background-size: cover;
+  }
