24/2/9 Board 부분 Infinity Scroll 반영

--- a/project/front/src/App.css
+++ b/project/front/src/App.css
@@ -183,6 +183,7 @@ nav ul li {
   border-radius: 0.5em;
   position: relative;
   width: calc(100% - 70px);
+  box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);
 }
 .BoardComment .replyContents::before {
   content: "";
