--- a/project/front/src/App.css
+++ b/project/front/src/App.css
@@ -1,3 +1,4 @@
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
 @font-face {
   font-family: "IBMPlexSansKR-Regular";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Regular.woff") format("woff");
@@ -23,7 +24,7 @@
   font-style: normal;
 }
 body {
-  font-family: "SUIT-Regular";
+  font-family: "SUIT-Regular", sans-serif;
 }
 
 .wrap {
@@ -105,6 +106,7 @@ nav ul {
 nav ul li {
   margin-left: 30px;
   padding: 25px 0px;
+  font-size: 14px;
 }
 
 .BoardReplyForm {
