--- a/project/front/src/app.scss
+++ b/project/front/src/app.scss
@@ -1,3 +1,6 @@
+@charset "UTF-8";
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
+
 @font-face {
   font-family: 'IBMPlexSansKR-Regular';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Regular.woff') format('woff');
@@ -30,7 +33,7 @@
 
 body{
   // font-family: 'IBMPlexSansKR-Regular';
-   font-family: 'SUIT-Regular';
+   font-family: 'SUIT-Regular', sans-serif;
   //  font-family: 'Pretendard-Regular';
   //  font-family: -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
   // input{
@@ -122,6 +125,7 @@ $error-Message-color : rgb(233, 97, 97);
       li{
         margin-left: 30px;
         padding: 25px 0px;
+        font-size: 14px;
       }
     }
   }
