--- a/project/front/src/app.scss
+++ b/project/front/src/app.scss
@@ -123,7 +123,7 @@ $error-Message-color : rgb(233, 97, 97);
     color: $error-Message-color;
 }
 .loaded{
-    animation: 0.4s ease load forwards;
+    animation: .4s .1s ease load forwards;
     opacity: 0;
   }
   .unloaded{
