--- a/project/front/src/app.scss
+++ b/project/front/src/app.scss
@@ -211,9 +211,15 @@ $error-Message-color : rgb(233, 97, 97);
   .BoardComment{
     margin-bottom: 3px;
     /* border-radius: 1em; */
-    padding: 10px 20px;
+    
+    margin: 0 1rem;
+    border-radius: 1em;
+    margin-bottom: 10px;
+    padding: 0 10px;
     display: flex;
+    align-items: center;
     position: relative;
+    background: rgba(0, 0, 0, 0.03);
     /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);
     /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);*/
     .replyPicture{
@@ -242,16 +248,17 @@ $error-Message-color : rgb(233, 97, 97);
       margin-bottom: 10px;
       font-size: 14px;
       word-break: break-all;
+      white-space: pre-line;
     }
     .replyContents{
-      background-color: #fff;
-      padding: 10px 15px;
+      // background-color: #fff;
+      // padding: 10px 15px;
       border-radius: 0.5em;
       position: relative;
       width: calc(100% - 70px);
-      box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);
+      // box-shadow: -15px -3px 10px rgba(136, 136, 136, 0.15), 4px 3px 14px rgba(36, 36, 36, 0.1);
       &::before{
-        content: "";
+        // content: "";
         display: block;
         position: absolute;
         left: -20px;
