--- a/project/front/src/App.css
+++ b/project/front/src/App.css
@@ -189,9 +189,14 @@ nav ul li {
 .BoardComment {
   margin-bottom: 3px;
   /* border-radius: 1em; */
-  padding: 10px 20px;
+  margin: 0 1rem;
+  border-radius: 1em;
+  margin-bottom: 10px;
+  padding: 0 10px;
   display: flex;
+  align-items: center;
   position: relative;
+  background: rgba(0, 0, 0, 0.03);
   /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);
   /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);*/
 }
@@ -221,17 +226,14 @@ nav ul li {
   margin-bottom: 10px;
   font-size: 14px;
   word-break: break-all;
+  white-space: pre-line;
 }
 .BoardComment .replyContents {
-  background-color: #fff;
-  padding: 10px 15px;
   border-radius: 0.5em;
   position: relative;
   width: calc(100% - 70px);
-  box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);
 }
 .BoardComment .replyContents::before {
-  content: "";
   display: block;
   position: absolute;
   left: -20px;
