--- a/project/front/src/App.css
+++ b/project/front/src/App.css
@@ -194,9 +194,7 @@ nav ul li {
   margin-bottom: 10px;
   padding: 0 10px;
   display: flex;
-  align-items: center;
   position: relative;
-  background: rgba(0, 0, 0, 0.03);
   /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);
   /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);*/
 }
@@ -229,11 +227,15 @@ nav ul li {
   white-space: pre-line;
 }
 .BoardComment .replyContents {
+  background-color: #fff;
+  padding: 10px 15px;
   border-radius: 0.5em;
   position: relative;
   width: calc(100% - 70px);
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.1);
 }
 .BoardComment .replyContents::before {
+  content: "";
   display: block;
   position: absolute;
   left: -20px;
