--- a/project/front/src/App.css
+++ b/project/front/src/App.css
@@ -195,16 +195,14 @@ nav ul li {
   padding: 0 10px;
   display: flex;
   position: relative;
-  /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);
-  /* box-shadow: -4px -4px 15px rgba(255, 255, 255, 0.7), 4px 4px 15px rgba(36, 36, 36, 0.15);*/
 }
 .BoardComment .replyPicture {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   margin-right: 20px;
   border-radius: 5em;
   box-shadow: -4px -4px 10px rgb(255, 255, 255), 4px 4px 10px rgba(36, 36, 36, 0.15);
-  border: 2px solid rgb(255, 255, 255);
+  border: 3px solid rgb(255, 255, 255);
   box-sizing: border-box;
 }
 .BoardComment .replyHeader {
@@ -214,7 +212,14 @@ nav ul li {
 }
 .BoardComment .replyHeader .reply_UserName {
   font-weight: bold;
+  display: flex;
+  align-items: center;
   font-size: 14px;
+}
+.BoardComment .replyHeader .reply_UserName svg {
+  opacity: 0.5;
+  font-size: 12px;
+  margin-right: 5px;
 }
 .BoardComment .replyDate {
   font-size: 12px;
@@ -232,7 +237,8 @@ nav ul li {
   border-radius: 0.5em;
   position: relative;
   width: calc(100% - 70px);
-  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(0, 0, 0, 0.08);
 }
 .BoardComment .replyContents::before {
   content: "";
